// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bottom 1`] = `
Object {
  "x": 10,
  "y": 20,
}
`;

exports[`left 1`] = `
Object {
  "x": -20,
  "y": 10,
}
`;

exports[`right 1`] = `
Object {
  "x": 20,
  "y": 10,
}
`;

exports[`top 1`] = `
Object {
  "x": 10,
  "y": -20,
}
`;
